cdk.out/PulsePlusStack.template.json
{
 "Resources": {
  "PulsePlusVpc9FBAFCBB": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/Resource"
   }
  },
  "PulsePlusVpcPublicSubnet1Subnet894121E7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet1/Subnet"
   }
  },
  "PulsePlusVpcPublicSubnet1RouteTable1A8D746A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet1/RouteTable"
   }
  },
  "PulsePlusVpcPublicSubnet1RouteTableAssociation9135E0AF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PulsePlusVpcPublicSubnet1RouteTable1A8D746A"
    },
    "SubnetId": {
     "Ref": "PulsePlusVpcPublicSubnet1Subnet894121E7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "PulsePlusVpcPublicSubnet1DefaultRoute62A066F5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PulsePlusVpcIGWE4753ADA"
    },
    "RouteTableId": {
     "Ref": "PulsePlusVpcPublicSubnet1RouteTable1A8D746A"
    }
   },
   "DependsOn": [
    "PulsePlusVpcVPCGW0D196583"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "PulsePlusVpcPublicSubnet1EIPC2825D1D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet1/EIP"
   }
  },
  "PulsePlusVpcPublicSubnet1NATGateway8FA5F7B9": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PulsePlusVpcPublicSubnet1EIPC2825D1D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PulsePlusVpcPublicSubnet1Subnet894121E7"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PulsePlusVpcPublicSubnet1DefaultRoute62A066F5",
    "PulsePlusVpcPublicSubnet1RouteTableAssociation9135E0AF"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet1/NATGateway"
   }
  },
  "PulsePlusVpcPublicSubnet2Subnet1E085482": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet2/Subnet"
   }
  },
  "PulsePlusVpcPublicSubnet2RouteTable00C2699C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet2/RouteTable"
   }
  },
  "PulsePlusVpcPublicSubnet2RouteTableAssociation8C612EF0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PulsePlusVpcPublicSubnet2RouteTable00C2699C"
    },
    "SubnetId": {
     "Ref": "PulsePlusVpcPublicSubnet2Subnet1E085482"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "PulsePlusVpcPublicSubnet2DefaultRoute7A665758": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PulsePlusVpcIGWE4753ADA"
    },
    "RouteTableId": {
     "Ref": "PulsePlusVpcPublicSubnet2RouteTable00C2699C"
    }
   },
   "DependsOn": [
    "PulsePlusVpcVPCGW0D196583"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "PulsePlusVpcPublicSubnet2EIP7E94030C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet2/EIP"
   }
  },
  "PulsePlusVpcPublicSubnet2NATGatewayFEDABEA0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PulsePlusVpcPublicSubnet2EIP7E94030C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PulsePlusVpcPublicSubnet2Subnet1E085482"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PulsePlusVpcPublicSubnet2DefaultRoute7A665758",
    "PulsePlusVpcPublicSubnet2RouteTableAssociation8C612EF0"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PublicSubnet2/NATGateway"
   }
  },
  "PulsePlusVpcPrivateSubnet1Subnet3F4D1470": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet1/Subnet"
   }
  },
  "PulsePlusVpcPrivateSubnet1RouteTable39D6EC0D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet1/RouteTable"
   }
  },
  "PulsePlusVpcPrivateSubnet1RouteTableAssociationCBB1F790": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PulsePlusVpcPrivateSubnet1RouteTable39D6EC0D"
    },
    "SubnetId": {
     "Ref": "PulsePlusVpcPrivateSubnet1Subnet3F4D1470"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "PulsePlusVpcPrivateSubnet1DefaultRouteB5A27252": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PulsePlusVpcPublicSubnet1NATGateway8FA5F7B9"
    },
    "RouteTableId": {
     "Ref": "PulsePlusVpcPrivateSubnet1RouteTable39D6EC0D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "PulsePlusVpcPrivateSubnet2Subnet8BFC7CC7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet2/Subnet"
   }
  },
  "PulsePlusVpcPrivateSubnet2RouteTable2A38B679": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet2/RouteTable"
   }
  },
  "PulsePlusVpcPrivateSubnet2RouteTableAssociationAB390E9B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PulsePlusVpcPrivateSubnet2RouteTable2A38B679"
    },
    "SubnetId": {
     "Ref": "PulsePlusVpcPrivateSubnet2Subnet8BFC7CC7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "PulsePlusVpcPrivateSubnet2DefaultRouteE33A54BD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PulsePlusVpcPublicSubnet2NATGatewayFEDABEA0"
    },
    "RouteTableId": {
     "Ref": "PulsePlusVpcPrivateSubnet2RouteTable2A38B679"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "PulsePlusVpcIGWE4753ADA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PulsePlusStack/PulsePlusVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/IGW"
   }
  },
  "PulsePlusVpcVPCGW0D196583": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PulsePlusVpcIGWE4753ADA"
    },
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusVpc/VPCGW"
   }
  },
  "PulsePlusClusterF16F44A9": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusCluster/Resource"
   }
  },
  "FrontendRepoF80FCC01": {
   "Type": "AWS::ECR::Repository",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendRepo/Resource"
   }
  },
  "BackendRepo7FFBAD06": {
   "Type": "AWS::ECR::Repository",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendRepo/Resource"
   }
  },
  "DBRepoBF10D354": {
   "Type": "AWS::ECR::Repository",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/DBRepo/Resource"
   }
  },
  "DBSecretD58955BC": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludePunctuation": true,
     "GenerateStringKey": "password",
     "SecretStringTemplate": "{\"username\":\"pulseplus-admin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/DBSecret/Resource"
   }
  },
  "DBSecretAttachmentC565A14F": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DBSecretD58955BC"
    },
    "TargetId": {
     "Ref": "DatabaseB269D8BB"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/DBSecret/Attachment/Resource"
   }
  },
  "DatabaseSubnetGroup7D60F180": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for Database database",
    "SubnetIds": [
     {
      "Ref": "PulsePlusVpcPrivateSubnet1Subnet3F4D1470"
     },
     {
      "Ref": "PulsePlusVpcPrivateSubnet2Subnet8BFC7CC7"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/Database/SubnetGroup/Default"
   }
  },
  "DatabaseSecurityGroup5C91FDCB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for Database database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/Database/SecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroupfromPulsePlusStackBackendServiceSecurityGroup973B7D2654328CD9D310": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from PulsePlusStackBackendServiceSecurityGroup973B7D26:5432",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DatabaseSecurityGroup5C91FDCB",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "BackendServiceSecurityGroup0865F57D",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/Database/SecurityGroup/from PulsePlusStackBackendServiceSecurityGroup973B7D26:5432"
   }
  },
  "DatabaseB269D8BB": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBName": "pulseplus_db",
    "DBSubnetGroupName": {
     "Ref": "DatabaseSubnetGroup7D60F180"
    },
    "Engine": "postgres",
    "EngineVersion": "13",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DBSecretD58955BC"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DBSecretD58955BC"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "DatabaseSecurityGroup5C91FDCB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/Database/Resource"
   }
  },
  "PulsePlusALB1A0B0D4B": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "PulsePlusALBSecurityGroup2EE5691E",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "PulsePlusVpcPublicSubnet1Subnet894121E7"
     },
     {
      "Ref": "PulsePlusVpcPublicSubnet2Subnet1E085482"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "PulsePlusVpcPublicSubnet1DefaultRoute62A066F5",
    "PulsePlusVpcPublicSubnet1RouteTableAssociation9135E0AF",
    "PulsePlusVpcPublicSubnet2DefaultRoute7A665758",
    "PulsePlusVpcPublicSubnet2RouteTableAssociation8C612EF0"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/Resource"
   }
  },
  "PulsePlusALBSecurityGroup2EE5691E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB PulsePlusStackPulsePlusALB9A2A955D",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 3001",
      "FromPort": 3001,
      "IpProtocol": "tcp",
      "ToPort": 3001
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/SecurityGroup/Resource"
   }
  },
  "PulsePlusALBSecurityGrouptoPulsePlusStackFrontendServiceSecurityGroupFB7A40D53000E92C1AE0": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FrontendServiceSecurityGroup85470DEC",
      "GroupId"
     ]
    },
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "PulsePlusALBSecurityGroup2EE5691E",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 3000
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/SecurityGroup/to PulsePlusStackFrontendServiceSecurityGroupFB7A40D5:3000"
   }
  },
  "PulsePlusALBSecurityGrouptoPulsePlusStackBackendServiceSecurityGroup973B7D263001BCCB2333": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "BackendServiceSecurityGroup0865F57D",
      "GroupId"
     ]
    },
    "FromPort": 3001,
    "GroupId": {
     "Fn::GetAtt": [
      "PulsePlusALBSecurityGroup2EE5691E",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 3001
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/SecurityGroup/to PulsePlusStackBackendServiceSecurityGroup973B7D26:3001"
   }
  },
  "PulsePlusALBFrontendListener923F49C4": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "PulsePlusALBFrontendListenerFrontendTargetGroup193FA06B"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "PulsePlusALB1A0B0D4B"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/FrontendListener/Resource"
   }
  },
  "PulsePlusALBFrontendListenerFrontendTargetGroup193FA06B": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/",
    "Port": 3000,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/FrontendListener/FrontendTargetGroup/Resource"
   }
  },
  "PulsePlusALBBackendListenerC1BC9744": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "PulsePlusALBBackendListenerBackendTargetGroup9D7C6524"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "PulsePlusALB1A0B0D4B"
    },
    "Port": 3001,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/BackendListener/Resource"
   }
  },
  "PulsePlusALBBackendListenerBackendTargetGroup9D7C6524": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/health",
    "Port": 3001,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/PulsePlusALB/BackendListener/BackendTargetGroup/Resource"
   }
  },
  "FrontendTaskDefTaskRoleDA0FD037": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendTaskDef/TaskRole/Resource"
   }
  },
  "FrontendTaskDef7D3FD156": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "FRONTEND_PORT",
        "Value": "3000"
       },
       {
        "Name": "NEXT_PUBLIC_FRONTEND_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "http://",
           {
            "Fn::GetAtt": [
             "PulsePlusALB1A0B0D4B",
             "DNSName"
            ]
           }
          ]
         ]
        }
       },
       {
        "Name": "NEXT_PUBLIC_BACKEND_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "http://",
           {
            "Fn::GetAtt": [
             "PulsePlusALB1A0B0D4B",
             "DNSName"
            ]
           },
           ":3001"
          ]
         ]
        }
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "FrontendRepoF80FCC01",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "FrontendRepoF80FCC01",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "FrontendRepoF80FCC01"
         },
         ":latest"
        ]
       ]
      },
      "Name": "FrontendContainer",
      "PortMappings": [
       {
        "ContainerPort": 3000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "FrontendTaskDefExecutionRoleE7329A09",
      "Arn"
     ]
    },
    "Family": "PulsePlusStackFrontendTaskDef917B0BEB",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "FrontendTaskDefTaskRoleDA0FD037",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendTaskDef/Resource"
   }
  },
  "FrontendTaskDefExecutionRoleE7329A09": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendTaskDef/ExecutionRole/Resource"
   }
  },
  "FrontendTaskDefExecutionRoleDefaultPolicy48DF7F3B": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FrontendRepoF80FCC01",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FrontendTaskDefExecutionRoleDefaultPolicy48DF7F3B",
    "Roles": [
     {
      "Ref": "FrontendTaskDefExecutionRoleE7329A09"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "FrontendServiceBC94BA93": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PulsePlusClusterF16F44A9"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "FrontendContainer",
      "ContainerPort": 3000,
      "TargetGroupArn": {
       "Ref": "PulsePlusALBFrontendListenerFrontendTargetGroup193FA06B"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FrontendServiceSecurityGroup85470DEC",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PulsePlusVpcPrivateSubnet1Subnet3F4D1470"
       },
       {
        "Ref": "PulsePlusVpcPrivateSubnet2Subnet8BFC7CC7"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "FrontendTaskDef7D3FD156"
    }
   },
   "DependsOn": [
    "FrontendTaskDefTaskRoleDA0FD037",
    "PulsePlusALBFrontendListenerFrontendTargetGroup193FA06B",
    "PulsePlusALBFrontendListener923F49C4"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendService/Service"
   }
  },
  "FrontendServiceSecurityGroup85470DEC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "PulsePlusStack/FrontendService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "DependsOn": [
    "FrontendTaskDefTaskRoleDA0FD037"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendService/SecurityGroup/Resource"
   }
  },
  "FrontendServiceSecurityGroupfromPulsePlusStackPulsePlusALBSecurityGroup89C2ECFD30000B7D4DED": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 3000,
    "GroupId": {
     "Fn::GetAtt": [
      "FrontendServiceSecurityGroup85470DEC",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "PulsePlusALBSecurityGroup2EE5691E",
      "GroupId"
     ]
    },
    "ToPort": 3000
   },
   "DependsOn": [
    "FrontendTaskDefTaskRoleDA0FD037"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/FrontendService/SecurityGroup/from PulsePlusStackPulsePlusALBSecurityGroup89C2ECFD:3000"
   }
  },
  "BackendTaskDefTaskRoleBA953A3B": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendTaskDef/TaskRole/Resource"
   }
  },
  "BackendTaskDef6ECE986E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BACKEND_PORT",
        "Value": "3001"
       },
       {
        "Name": "NODE_ENV",
        "Value": "production"
       },
       {
        "Name": "POSTGRES_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "postgres://",
           {
            "Fn::GetAtt": [
             "DatabaseB269D8BB",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "DatabaseB269D8BB",
             "Endpoint.Port"
            ]
           },
           "/pulseplus_db"
          ]
         ]
        }
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "BackendRepo7FFBAD06",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "BackendRepo7FFBAD06",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "BackendRepo7FFBAD06"
         },
         ":latest"
        ]
       ]
      },
      "Name": "BackendContainer",
      "PortMappings": [
       {
        "ContainerPort": 3001,
        "Protocol": "tcp"
       }
      ],
      "Secrets": [
       {
        "Name": "JWT_SECRET",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "DBSecretD58955BC"
           },
           ":jwt_secret::"
          ]
         ]
        }
       },
       {
        "Name": "SESSION_SECRET",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "DBSecretD58955BC"
           },
           ":session_secret::"
          ]
         ]
        }
       },
       {
        "Name": "DB_PASSWORD",
        "ValueFrom": {
         "Fn::Join": [
          "",
          [
           {
            "Ref": "DBSecretD58955BC"
           },
           ":password::"
          ]
         ]
        }
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "BackendTaskDefExecutionRoleC5A001DB",
      "Arn"
     ]
    },
    "Family": "PulsePlusStackBackendTaskDef5CDCC19F",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "BackendTaskDefTaskRoleBA953A3B",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendTaskDef/Resource"
   }
  },
  "BackendTaskDefExecutionRoleC5A001DB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendTaskDef/ExecutionRole/Resource"
   }
  },
  "BackendTaskDefExecutionRoleDefaultPolicyAA625660": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "BackendRepo7FFBAD06",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "DBSecretD58955BC"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BackendTaskDefExecutionRoleDefaultPolicyAA625660",
    "Roles": [
     {
      "Ref": "BackendTaskDefExecutionRoleC5A001DB"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "BackendService7A4224EE": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PulsePlusClusterF16F44A9"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "BackendContainer",
      "ContainerPort": 3001,
      "TargetGroupArn": {
       "Ref": "PulsePlusALBBackendListenerBackendTargetGroup9D7C6524"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "BackendServiceSecurityGroup0865F57D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PulsePlusVpcPrivateSubnet1Subnet3F4D1470"
       },
       {
        "Ref": "PulsePlusVpcPrivateSubnet2Subnet8BFC7CC7"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "BackendTaskDef6ECE986E"
    }
   },
   "DependsOn": [
    "BackendTaskDefTaskRoleBA953A3B",
    "PulsePlusALBBackendListenerBackendTargetGroup9D7C6524",
    "PulsePlusALBBackendListenerC1BC9744"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendService/Service"
   }
  },
  "BackendServiceSecurityGroup0865F57D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "PulsePlusStack/BackendService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PulsePlusVpc9FBAFCBB"
    }
   },
   "DependsOn": [
    "BackendTaskDefTaskRoleBA953A3B"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendService/SecurityGroup/Resource"
   }
  },
  "BackendServiceSecurityGroupfromPulsePlusStackPulsePlusALBSecurityGroup89C2ECFD3001C7A41A3E": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 3001,
    "GroupId": {
     "Fn::GetAtt": [
      "BackendServiceSecurityGroup0865F57D",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "PulsePlusALBSecurityGroup2EE5691E",
      "GroupId"
     ]
    },
    "ToPort": 3001
   },
   "DependsOn": [
    "BackendTaskDefTaskRoleBA953A3B"
   ],
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/BackendService/SecurityGroup/from PulsePlusStackPulsePlusALBSecurityGroup89C2ECFD:3001"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31TwW7bMAz9lt0VdcvQ3dOkLQIMmxEXvQ60zGZsHMmQqBSF4X8vLcWx2wI98fHxySKf6KX+cX2tv3+Dl7Aw9WHRUKW7ksEclFD/OjRL3T22Rq2f7GOxVkWsGjJlrCzywE1o5yLjA1QNTvzErUJwhoDJ2Yt4ALfbYgh/gO+B8QVeVeHpJHD68NYyesGjIHdyzlYsvf4/omVVoome+PXeu9imHr4ktnbvMYRP/G2ie4Um6G7dxCC3D6IR3oHfwzBVOGzwiSyNM31knGUgi37Gnc+W6E9ksk8ZDtd53e2wdYHY+TTllPUqSB05HMHCHkVZpvzc/IByeJALkGemXAQfK73ytQy4AYYKAm5tYLDSU/b9Ytnm5hMxSqXnBgKTaRzUFTTCkd2fZF9WbStLkh77t9RuUi27+C6f60jMtWfNiGf13P6li1naK4KjWOfy4qVYODmXPMyo7 [...]
   },
   "Metadata": {
    "aws:cdk:path": "PulsePlusStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "LoadBalancerDNS": {
   "Value": {
    "Fn::GetAtt": [
     "PulsePlusALB1A0B0D4B",
     "DNSName"
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
